MovieAPI Spring Button

--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -33,6 +33,7 @@
          <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb" />
          <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
          <JFXButton fx:id="searchBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Filter" onAction="#searchBtnClicked"/>
+         <JFXButton fx:id="clearBtn"  styleClass="background-yellow" stylesheets="@styles.css" text="Filter2" onAction="#sortBtnClicked"/>
       </children>
       <VBox.margin>
          <Insets />
