--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -32,6 +32,8 @@
          <JFXButton fx:id="sortBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Sort" onAction="#sortBtnClicked"/>
          <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb" />
          <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
+         <JFXComboBox fx:id="genreComboBoxRelease" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
+         <JFXComboBox fx:id="genreComboBoxRate" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
          <JFXButton fx:id="searchBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Filter" onAction="#searchBtnClicked"/>
          <JFXButton fx:id="clearBtn"  styleClass="background-yellow" stylesheets="@styles.css" text="Filter2" onAction="#sortBtnClicked"/>
       </children>
